# weather_dashboard

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
weather_dashboard/: __init__.py  dataset.py  features.py  plots.py
weather_dashboard/modeling/: predict.py  train.py
