[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "weather_dashboard"
version = "0.0.1"
description = "Weather Dashboard that pulls data from an api"
authors = [
  { name = "Gonzalo Gamez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["weather_dashboard"]
force_sort_within_sections = true
